update Header component styles. Fix Header text color bug on mobile

--- a/src/assets/stylesheets/components/_header.scss
+++ b/src/assets/stylesheets/components/_header.scss
@@ -40,7 +40,7 @@ $header-md-breakpoint: 37em;
     color: inherit;
 
     img {
-      max-width: 2.3rem;
+      max-width: 1.5rem;
     }
 
     a {
@@ -49,10 +49,10 @@ $header-md-breakpoint: 37em;
 
     span {
       color: inherit;
-      font-weight: 700;
-      font-size: .9rem;
+      font-weight: 500;
+      font-size: .8rem;
       letter-spacing: .01em;
-      padding: 0 1rem;
+      padding: 0 .5rem;
       display: inline-block;
       transition: $global-transition;
       position: relative;
@@ -88,9 +88,6 @@ $header-md-breakpoint: 37em;
         opacity: 1;
       }
 
-      &.active {
-        // color: map-get($colors, white);
-      }
     }
   }
 }
@@ -101,18 +98,13 @@ $header-md-breakpoint: 37em;
 
   .site-header {
     position: absolute;
-    top: 0;
+    top: 1rem;
     left: 0;
     right: 0;
     z-index: 10;
-    // color: map-get($colors, black);
 
-    a {
-      // color: map-get($colors, black);
-
-      &:hover {
-        color: inherit;
-      }
+    a:hover {
+      color: inherit;
     }
 
     &__content {
@@ -123,16 +115,18 @@ $header-md-breakpoint: 37em;
     .site-nav {
       display: flex;
       justify-content: center;
-      // border-bottom: 1px solid rgba(black, .1);
-      // padding: $nav-padding-top 0 0;
     }
 
     &__logo {
       text-decoration: none;
 
+      a {
+        margin-right: 1rem;
+      }
+
       img {
         max-width: none;
-        width: 1.75rem;
+        width: 1.5rem;
 
         &.black-logo {
           display: none;
@@ -146,8 +140,8 @@ $header-md-breakpoint: 37em;
       align-items: center;
 
       &__link {
-        font-weight: 700;
-        font-size: .9rem;
+        font-weight: 500;
+        font-size: .8rem;
         letter-spacing: .01em;
         padding: 0 .5rem;
         margin: 0 .25rem;
@@ -163,12 +157,6 @@ $header-md-breakpoint: 37em;
           right: 0;
           height: 0;
           transition: .2s all linear;
-        }
-
-        &:hover,
-        &:focus,
-        .active {
-          // color: map-get($colors, dark-red);
         }
 
         &:hover::before,
@@ -194,11 +182,16 @@ $header-md-breakpoint: 37em;
 
   .site-header__logo,
   .nav-group__right {
-    width: 20%;
+    width: 25%;
+  }
+
+  .site-header__logo {
+    padding-left: 2rem;
   }
 
   .nav-group.nav-group__right {
     justify-content: flex-end;
+    padding-right: 2rem;
   }
 }
 
@@ -281,40 +274,41 @@ $header-md-breakpoint: 37em;
   }
 }
 
-// Nav Theme
-.dark-theme .site-header {
 
-  a {
-    color: map-get($colors, black);
-  }
+// Nav Themes
+@media screen and (min-width: $screen-small) {
 
-  .white-logo {
-    display: none;
-  }
-  .black-logo {
-    display: inline-block !important;
-  }
-}
+  .dark-theme .site-header {
 
-.light-theme .site-header {
-  color: rgba(map-get($colors, white), 1);
+    a {
+      color: map-get($colors, black);
+    }
 
-  a {
-    color: rgba(map-get($colors, white), 1);
-
-    &:hover {
-      color: inherit;
+    .white-logo {
+      display: none;
+    }
+    .black-logo {
+      display: inline-block !important;
     }
   }
 
-  .white-logo {
-    display: inline-block !important;
-  }
-  .black-logo {
-    display: none;
-  }
+  .light-theme .site-header {
+    color: rgba(map-get($colors, white), 1);
 
-  .site-nav {
-    // border-color: rgba(white, .2);
+    a {
+      color: rgba(map-get($colors, white), 1);
+
+      &:hover {
+        color: inherit;
+      }
+    }
+
+    .white-logo {
+      display: inline-block !important;
+    }
+    .black-logo {
+      display: none;
+    }
+
   }
 }
